--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:/Aman5695.github.io/ToDo-List-App",
+  "homepage": "https://Aman5695.github.io/Todo_App",
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
